# ECEN5273_PA4

./: CMakeLists.txt  README.md  makefile
DFC/: P2  P4  dfc  dfc.c  dfc.conf  mytext.txt
DFS/: dfs1.c  dfs11  dfs2.c  dfs22  dfs3.c  dfs33  dfs4.c  dfs44
DFS/DFS1/: mytext.txt.2
DFS/DFS2/: mytext.txt.3
DFS/DFS3/: mytext.txt.4
DFS/DFS4/: mytext.txt.1
DFS2/: dfs2.c
